# qwen3_tts_rust_app

./: .gitignore  Cargo.toml  PLAN.md  README.md  SPEC.md  TODO.md  lessons.md  qwen-tts.toml.example
.github/workflows/: release.yml
.opencode/plans/: phase3-ffi-runtime.md
docs/superpowers/plans/: 2026-06-14-auto-download-models.md  2026-06-14-gpu-acceleration.md
docs/superpowers/specs/: 2026-06-14-auto-download-models-design.md  2026-06-14-gpu-acceleration-design.md
examples/: prompt.txt
scripts/: package.ps1  setup_linux_cuda.sh  smoke_synth.ps1
src/: config.rs  downloader.rs  gguf_probe.rs  gui.rs  main.rs  qwen_ffi.rs  qwentts_cli.rs
