[package]
name = "qwen3-tts-rust-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust local TTS app for Qwen3-TTS GGUF using llama-gguf metadata plus qwentts.cpp runtime"

[features]
default = ["cli"]
cli = []
gui = ["eframe", "egui", "rodio"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
which = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# GGUF metadata inspection
llama-gguf = "0.14.0"
# HTTP download with progress bar
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"

# GUI (optional, via "gui" feature)
eframe = { version = "0.31", optional = true, default-features = false, features = ["default"] }
egui = { version = "0.31", optional = true }
rodio = { version = "0.20", optional = true }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "qwen-tts-app"
path = "src/main.rs"
